fixed layout issue with nav bar

--- a/public/stylesheets/layout/layout_app.css
+++ b/public/stylesheets/layout/layout_app.css
@@ -121,6 +121,7 @@ body:before {
   line-height: 32px;
   font-size: 14px;
   font-weight: normal;
+  text-decoration: none;
 }
 
 .user-menu a:hover {
@@ -129,7 +130,7 @@ body:before {
 }
 
 .user-menu a:active {
-  color: rgba(36, 67, 161, .6);
+  color: #ffffff;
 }
 
 .user-menu ul {
